# RTIOW

./: CMakeLists.txt  README.md
src/: main.cpp
src/base/: camera.cpp  camera.hpp  image.cpp  image.hpp
src/entities/: bvh.cpp  bvh.hpp  entity.hpp  entity_list.cpp  entity_list.hpp  sphere.cpp  sphere.hpp
src/materials/: dielectric.cpp  dielectric.hpp  lambertian.cpp  lambertian.hpp  material.hpp  metal.cpp  metal.hpp
src/scenes/: book1_final.hpp  complex_moving.hpp  correct_dielectric.hpp  first_dielectric.hpp  first_dof.hpp  first_fov.hpp  first_free_cam.hpp  first_fuzz.hpp  first_materials.hpp  first_moving.hpp  first_sphere.hpp  scene.hpp
src/utils/: aabb.cpp  aabb.hpp  camera.cpp  camera.hpp  color.hpp  common.cpp  common.hpp  debug.hpp  image.cpp  image.hpp  interval.hpp  ray.hpp  rng.cpp  rng.hpp  types.hpp  vec3.hpp
